--- a/youtube.html
+++ b/youtube.html
@@ -12,7 +12,31 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
+    <div class="header">
+        <div class="left-part">
+            <img src="logos/hamburger-menu.svg" class="hamb-menu">
+            <img src="logos/youtube-logo.svg" class="youtube-logo">
+        </div>
+
+        <div class="middle-part">
+            <input type="text" placeholder="Search" class="search">
+            <img src="logos/search.svg" class="search-logo">
+            <img src="logos/voice-search-icon.svg" class="voice-search">
+        </div>
+
+        <div class="right-part">
+            <img src="logos/upload.svg" class="upload">
+            <img src="logos/youtube-apps.svg" class="yt-apps">
+            <img src="logos/notifications.svg" class="notifications">
+            <img src="logos/salonee.jpg" class="my-profile">
+        </div>
+    </div>
+
+    <div class="sidebar">
+        sidebar
+    </div>
+
+    <div class="container">        
         <div class="video-preview">
             <img src="thumbnails/thumbnail-1.webp" class="thumbnail">
             <div class="not-thumbnail">
