added time and logo

--- a/youtube.html
+++ b/youtube.html
@@ -38,7 +38,10 @@
 
     <div class="container">        
         <div class="video-preview">
-            <img src="thumbnails/thumbnail-1.webp" class="thumbnail">
+            <div class="thumbnail-row">
+                <img src="thumbnails/thumbnail-1.webp" class="thumbnail">
+                <div class="vid-time">14:20</div>
+            </div>
             <div class="not-thumbnail">
                 <div class="profile-pic">
                     <img src="profile-pics/channel-1.jpeg" class="pic">
@@ -58,7 +61,10 @@
         </div>
 
         <div class="video-preview">
-            <img src="thumbnails/thumbnail-2.webp" class="thumbnail">
+            <div class="thumbnail-row">
+                <img src="thumbnails/thumbnail-2.webp" class="thumbnail">
+                <div class="vid-time">8:22</div>
+            </div>
             <div class="not-thumbnail">
                 <div class="profile-pic">
                     <img src="profile-pics/channel-2.jpeg" class="pic">
@@ -78,7 +84,10 @@
         </div>
 
         <div class="video-preview">
-            <img src="thumbnails/thumbnail-3.webp" class="thumbnail">
+            <div class="thumbnail-row">
+                <img src="thumbnails/thumbnail-3.webp" class="thumbnail">
+                <div class="vid-time">9:13</div>
+            </div>
             <div class="not-thumbnail">
                 <div class="profile-pic">
                     <img src="profile-pics/channel-3.jpeg" class="pic">
@@ -98,7 +107,10 @@
         </div>
 
         <div class="video-preview">
-            <img src="thumbnails/thumbnail-4.webp" class="thumbnail">
+            <div class="thumbnail-row">
+                <img src="thumbnails/thumbnail-4.webp" class="thumbnail">
+                <div class="vid-time">22:09</div>
+            </div>
             <div class="not-thumbnail">
                 <div class="profile-pic">
                     <img src="profile-pics/channel-4.jpeg" class="pic">
@@ -118,7 +130,10 @@
         </div>
 
         <div class="video-preview">
-            <img src="thumbnails/thumbnail-5.webp" class="thumbnail">
+            <div class="thumbnail-row">
+                <img src="thumbnails/thumbnail-5.webp" class="thumbnail">
+                <div class="vid-time">11:17</div>
+            </div>
             <div class="not-thumbnail">
                 <div class="profile-pic">
                     <img src="profile-pics/channel-5.jpeg" class="pic">
@@ -138,7 +153,10 @@
         </div>
 
         <div class="video-preview">
-            <img src="thumbnails/thumbnail-6.webp" class="thumbnail">
+            <div class="thumbnail-row">
+                <img src="thumbnails/thumbnail-6.webp" class="thumbnail">
+                <div class="vid-time">19:59</div>
+            </div>
             <div class="not-thumbnail">
                 <div class="profile-pic">
                     <img src="profile-pics/channel-6.jpeg" class="pic">
@@ -152,6 +170,144 @@
                     </p>
                     <p class="video-info">
                         141M views &#183 1 year ago
+                    </p>
+                </div>                
+            </div>
+        </div>
+
+        <div class="video-preview">
+            <div class="thumbnail-row">
+                <img src="thumbnails/thumbnail-7.webp" class="thumbnail">
+                <div class="vid-time">10:13</div>
+            </div>
+            <div class="not-thumbnail">
+                <div class="profile-pic">
+                    <img src="profile-pics/channel-7.jpeg" class="pic">
+                </div>
+                <div>
+                    <p class="video-title">
+                        Why Planes Don't Fly Over Tibet
+                    </p>
+                    <p class="video-user">
+                        RealLifeLore
+                    </p>
+                    <p class="video-info">
+                        6.6M views &#183 1 year ago
+                    </p>
+                </div> 
+            </div>
+        </div>
+
+        <div class="video-preview">
+            <div class="thumbnail-row">
+                <img src="thumbnails/thumbnail-8.webp" class="thumbnail">
+                <div class="vid-time">7:12</div>
+            </div>
+            <div class="not-thumbnail">
+                <div class="profile-pic">
+                    <img src="profile-pics/channel-8.jpeg" class="pic">
+                </div>
+                <div>
+                    <p class="video-title">
+                        Inside The World's Biggest Passenger Plane
+                    </p>
+                    <p class="video-user">
+                        Tech Vision
+                    </p>
+                    <p class="video-info">
+                        3.7M views &#183 10 months ago
+                    </p>
+                </div>                
+            </div>
+        </div>
+
+        <div class="video-preview">
+            <div class="thumbnail-row">
+                <img src="thumbnails/thumbnail-9.webp" class="thumbnail">
+                <div class="vid-time">13:17</div>
+            </div>
+            <div class="not-thumbnail">
+                <div class="profile-pic">
+                    <img src="profile-pics/channel-9.jpeg" class="pic">
+                </div>
+                <div>
+                    <p class="video-title">
+                        The SECRET to Super Human STRENGTH
+                    </p>
+                    <p class="video-user">
+                        ThenX
+                    </p>
+                    <p class="video-info">
+                        20M views &#183 3 years ago
+                    </p>
+                </div>                
+            </div>
+        </div>
+
+        <div class="video-preview">
+            <div class="thumbnail-row">
+                <img src="thumbnails/thumbnail-10.webp" class="thumbnail">
+                <div class="vid-time">7:53</div>
+            </div>
+            <div class="not-thumbnail">
+                <div class="profile-pic">
+                    <img src="profile-pics/channel-10.jpeg" class="pic">
+                </div>
+                <div>
+                    <p class="video-title">
+                        How The World's Largest Cruise Ship Makes 30,000 Meals Every Day
+                    </p>
+                    <p class="video-user">
+                        Business Insider
+                    </p>
+                    <p class="video-info">
+                        14M views &#183 1 year ago
+                    </p>
+                </div>                
+            </div>
+        </div>
+
+        <div class="video-preview">
+            <div class="thumbnail-row">
+                <img src="thumbnails/thumbnail-11.webp" class="thumbnail">
+                <div class="vid-time">4:10</div>
+            </div>
+            <div class="not-thumbnail">
+                <div class="profile-pic">
+                    <img src="profile-pics/channel-11.jpeg" class="pic">
+                </div>
+                <div>
+                    <p class="video-title">
+                        Dubai's Crazy Underwater Train and Other Things #Only in Dubai
+                    </p>
+                    <p class="video-user">
+                        Destination Tips
+                    </p>
+                    <p class="video-info">
+                        3M views &#183 1 year ago
+                    </p>
+                </div>                
+            </div>
+        </div>
+
+        <div class="video-preview">
+            <div class="thumbnail-row">
+                <img src="thumbnails/thumbnail-12.webp" class="thumbnail">
+                <div class="vid-time">4:51</div>
+            </div>
+            <div class="not-thumbnail">
+                <div class="profile-pic">
+                    <img src="profile-pics/channel-12.jpeg" class="pic">
+                </div>
+                <div>
+                    <p class="video-title">
+                        What would happen if you didn't drink water? - Mia Nacamulli
+                    </p>
+                    <p class="video-user">
+                        TED-Ed
+                    </p>
+                    <p class="video-info">
+                        12M views &#183 5 years ago
                     </p>
                 </div>                
             </div>
