added sidebar and hovers

--- a/youtube.html
+++ b/youtube.html
@@ -20,20 +20,61 @@
 
         <div class="middle-part">
             <input type="text" placeholder="Search" class="search">
-            <img src="logos/search.svg" class="search-logo">
-            <img src="logos/voice-search-icon.svg" class="voice-search">
+            <div class="buttons-hover">
+                <img src="logos/search.svg" class="search-logo">
+                <div class="tooltip">Search</div>
+            </div>
+            <div class="buttons-hover">
+                <img src="logos/voice-search-icon.svg" class="voice-search">
+                <div class="tooltip">Search with your voice</div>
+            </div>
         </div>
 
         <div class="right-part">
-            <img src="logos/upload.svg" class="upload">
-            <img src="logos/youtube-apps.svg" class="yt-apps">
-            <img src="logos/notifications.svg" class="notifications">
+            <div class="buttons-hover">
+                <img src="logos/upload.svg" class="upload">
+                <div class="tooltip">Create</div>
+            </div>
+            <div class="buttons-hover">
+                <img src="logos/youtube-apps.svg" class="yt-apps">
+                <div class="tooltip">YouTube Apps</div>
+            </div>
+            <div class="buttons-hover">
+                <div class="notif-container">
+                    <img src="logos/notifications.svg" class="notifications">
+                    <div class="notif-count">3</div>
+                </div>
+                <div class="tooltip">Notifications</div>
+            </div>
             <img src="logos/salonee.jpg" class="my-profile">
         </div>
     </div>
 
     <div class="sidebar">
-        sidebar
+        <div class="side-link">
+            <img src="logos/home.svg" class="s-logo">
+            <div class="s-name">Home</div>
+        </div>
+        <div class="side-link">
+            <img src="logos/explore.svg" class="s-logo">
+            <div class="s-name">Explore</div>
+        </div>
+        <div class="side-link">
+            <img src="logos/subscriptions.svg" class="s-logo">
+            <div class="s-name">Subscriptions</div>
+        </div>
+        <div class="side-link">
+            <img src="logos/originals.svg" class="s-logo">
+            <div class="s-name">Originals</div>
+        </div>
+        <div class="side-link">
+            <img src="logos/youtube-music.svg" class="s-logo">
+            <div class="s-name">YouTube Music</div>
+        </div>
+        <div class="side-link">
+            <img src="logos/library.svg" class="s-logo">
+            <div class="s-name">Library</div>
+        </div>
     </div>
 
     <div class="container">        
